<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Messenger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_search">Search</string>
    <string name="menu_new_discussion">New discussion</string>
    <string name="menu_new_group">New group</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_discussions">Discussions</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="menu_state">State</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_state">State</string>
    <string name="title_activity_new_group">NewGroup</string>
    <string name="menu_remove_all">Remove all</string>
    <string name="menu_group_discussion">Groups</string>
    <string name="menu_add_contact">Add contact</string>
    <string name="menu_remove_contact">Remove</string>
    <string name="title_activity_discussion">Discussion</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="title_activity_new_discussion">Sélection contact</string>

</resources>
