<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="utt.isi.if26.project.android.messenger.Activity.implementation.DiscussionsActivity">
    <item android:id="@+id/menu_search"
          android:icon="@drawable/ic_search"
          android:showAsAction="ifRoom"
          android:title="@string/menu_search"/>
    <item android:id="@+id/menu_new_message"
          android:icon="@drawable/ic_new_discussion"
          android:showAsAction="ifRoom"
          android:title="@string/menu_new_discussion"/>
    <item android:id="@+id/menu_new_group"
          android:title="@string/menu_new_group"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/menu_contacts"
          android:title="@string/menu_contacts"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/menu_settings"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/menu_state"
          android:title="@string/menu_state"
          android:orderInCategory="100"
          android:showAsAction="never"/>
</menu>
